Update Niben Bay Camp (#1864)
* Add location name
* Update cleaning data

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -12365,7 +12365,9 @@ plugins:
         itm: 30
 
   - name: 'Niben Bay Camp.esp'
-    url: [ 'https://www.nexusmods.com/oblivion/mods/50087/' ]
+    url:
+      - link: 'https://www.nexusmods.com/oblivion/mods/50087/'
+        name: 'Niben Bay Camp'
     req: [ 'DLCShiveringIsles.esp' ]
     msg:
       - type: say
@@ -12383,9 +12385,9 @@ plugins:
       - Scripts
     clean:
       - crc: 0x07B556E2
-        util: 'TES4Edit v4.0.4'
+        util: 'TES4Edit v4.1.5f'
       - crc: 0x01616A07
-        util: 'TES4Edit v4.0.4'
+        util: 'TES4Edit v4.1.5f'
 
   - name: 'No psychic guards( harder)? v1\.2\.esp'
     url: [ 'https://www.nexusmods.com/oblivion/mods/11911/' ]
