--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -8251,8 +8251,10 @@ plugins:
     req: [ 'DLCShiveringIsles.esp' ]
 
   - name: 'Immersive Quest Marker Overhaul.esp'
-	url: [ 'https://www.nexusmods.com/oblivion/mods/54007' ]
-	group: *earlyLoadersGroup
+    url:
+      - link: 'https://www.nexusmods.com/oblivion/mods/54007/'
+        name: 'Immersive Quest Marker Overhaul'
+    group: *earlyLoadersGroup
 
   - name: 'Jail Break (Escape )?Routes\.esp'
     url: [ 'https://www.nexusmods.com/oblivion/mods/39385/' ]
